API-keys verifying and refactor
